# edstuto_2025

./: README.md  pyproject.toml  requirements.txt
exercises/: README.md
exercises/exercise1/: ex1_enonce.ipynb  ex1_solution.ipynb
exercises/exercise2/: ex2_enonce.ipynb  ex2_solution.ipynb
exercises/exercise2/data/: df_condition.pkl  df_dedup_deterministic.pkl  df_dedup_proba.pkl  df_med.pkl
exercises/exercise3/: ex3_enonce.ipynb  ex3_solution.ipynb
exercises/exercise3/data/: df_condition.pkl  df_med.pkl  df_med_all.pkl  df_note.pkl  df_note_nlp.pkl  df_person.pkl  df_visit.pkl
exercises/exercise4/: ex4_enonce.ipynb  ex4_solution.ipynb
exercises/exercise4/data/: df_bio.pkl  df_comorb.pkl  df_condition.pkl  df_med.pkl  df_person.pkl  df_visit.pkl
final_project_centrale/data/: df_bio.pkl  df_condition.pkl  df_dedup_deterministic.pkl  df_dedup_proba.pkl  df_note.pkl  df_person.pkl  df_visit.pkl
