[project]
name = "edstuto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0",
    "edsnlp==0.17.1",
    "ipykernel>=6.29.5",
    "ipython<9.0",
    "lifelines==0.26.3",
    "nbconvert>=7.16.6",
    "numpy>=1.21",
    "pandas>=2.2.3",
    "pip>=21.2.4",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "scipy<1.14.0",
    "seaborn>=0.13.2",
    "spacy>=3.1",
    "statsmodels>=0.14.4",
]
